--- a/css/styles.css
+++ b/css/styles.css
@@ -34,10 +34,18 @@ body {
 .list {
   list-style: none;
 }
-
 .link {
   color: inherit;
   text-decoration: none;
+}
+
+.link:hover,
+.link:focus {
+  color: var(--accent-color);
+}
+.footer .link:focus,
+.footer .link:hover {
+  color: var(--accent-color);
 }
 
 .container {
@@ -73,11 +81,6 @@ body {
   font-weight: 500;
   line-height: 1 142;
   letter-spacing: 0.02em;
-}
-
-.link:hover,
-.link:focus {
-  color: var(--accent-color);
 }
 
 .current {
