--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,6 @@
 body {
   color: var(--primary-text-color);
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 0.03em;
-  font-size: 14px;
 }
 
 .list {
@@ -61,7 +59,8 @@ body {
   color: var(--primary-text-color);
   font-weight: bold;
   font-size: 26px;
-  line-height: 1 192;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
   text-decoration: none;
 }
 
@@ -76,11 +75,20 @@ body {
 
 /* nav-list */
 
-.nav-list {
-  color: inherit;
+.list.nav-list,
+.list.aside {
+  font-style: normal;
+  font-size: 14px;
   font-weight: 500;
-  line-height: 1 142;
+  line-height: 1.142;
   letter-spacing: 0.02em;
+}
+
+.list.nav-list {
+  color: inherit;
+}
+.list.aside {
+  color: var(--title-text-color);
 }
 
 .current {
@@ -132,6 +140,8 @@ body {
   font-size: 16px;
   line-height: 1.625;
   background-color: var(--grey-background-color);
+  padding: 6px 22px;
+  letter-spacing: 0.03em;
 }
 
 .button-portfolio:hover,
@@ -157,9 +167,10 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.875;
+  letter-spacing: 0.03em;
 }
 /* work */
-.list-sabtitle {
+.list-subtitle {
   color: inherit;
   font-family: inherit;
   font-style: normal;
@@ -177,6 +188,7 @@ body {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.714;
+  letter-spacing: 0.03em;
 }
 
 /* working */
@@ -189,6 +201,7 @@ body {
   font-size: 36px;
   line-height: 1.166;
   text-align: center;
+  letter-spacing: 0.03em;
 }
 
 /* portfolio */
@@ -200,6 +213,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.187;
+  letter-spacing: 0.03em;
 }
 .portfolio-subtitle-text {
   color: var(--title-text-color);
@@ -208,6 +222,7 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.187;
+  letter-spacing: 0.03em;
 }
 
 /* footer */
@@ -218,6 +233,7 @@ body {
   font-weight: normal;
   font-size: 14px;
   line-height: 1.714;
+  letter-spacing: 0.03em;
 }
 
 .footer address {
@@ -225,5 +241,7 @@ body {
   font-family: inherit;
   font-style: normal;
   font-weight: normal;
+  font-size: 14px;
   line-height: 1.714;
+  letter-spacing: 0.03em;
 }
